k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comic-prod
  labels:
    istio-injection: enabled
