k8s/base/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: comic-gateway
  namespace: comic-prod
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts: ["*"]
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: comic-api-routing
  namespace: comic-prod
spec:
  hosts:
    - "comic-api.apl.io.vn"
  gateways: ["comic-gateway"]
  http:
    - route:
        - destination:
            host: backend
            port:
              number: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: comic-frontend-routing
  namespace: comic-prod
spec:
  hosts:
    - "comic.apl.io.vn"
  gateways: ["comic-gateway"]
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 3000
